fix(security): remediar 11 vulnerabilidades de seguranca
- Remover secrets hardcoded (JWT_SECRET, senha DB) do application.properties
- Criar RegisterRequest DTO: registro publico agora so aceita name/email/password (role=SECRETARIO)
- Adicionar @JsonIgnore no campo password do User entity
- Adicionar role-based authorization no SecurityConfig (DELETE=ADMIN, grades/attendance/finance/settings restritos)
- Fixar CORS: headers explicitos em vez de wildcard, trim de origin
- Fixar GlobalExceptionHandler: mensagem generica em vez de expor detalhes internos
- Fixar JwtAuthenticationFilter: null checks para email/role
- Fixar JwtUtil: charset UTF_8 explicito, validacao de issuer
- Adicionar @Size(min=8) na senha do AuthRequest
- Remover spring-boot-devtools do pom.xml
- Fixar Dockerfile: usuario appuser nao-root
- Desabilitar show-sql e format_sql em producao